--- a/index.html
+++ b/index.html
@@ -302,9 +302,9 @@
                 
                 <h1 id="crosshmi">CrossHMI</h1>
 <h2 id="subject">Subject</h2>
-<p>This project is meant to prove how vaiable is it to push Human-Machine-Interfaces from huge monitoring systems into small, mobile devices. Achieving such feat would allow to make monitoring easier and more versatile depending on the given circumstances..</p>
+<p>This project is meant to prove how vaiable is it to push Human-Machine-Interfaces from huge monitoring systems into small, mobile devices. Achieving such feat would allow to make monitoring easier and more versatile depending on the given circumstances. In other words we are dealing with reactive visualization of asynchronous data on mobile devices.</p>
 <h2 id="goal">Goal</h2>
-<p>The goal is to provide mobile application that is able to gather data from nearby devices, which are emitting various data. This data shall be presented in human-readable form taking into consideration localisation of both device and mobile HMI.</p>
+<p>The goal is to provide mobile application that is able to gather data from nearby devices, which are emitting various data. This data shall be presented in human-readable form taking into consideration localisation of both device and mobile HMI as well as the semantics represented by the type of data.</p>
 <h2 id="scope">Scope</h2>
 <ul>
 <li>Building cross-platform mobile application using Xamarin.</li>
